# bt_ml_ops

./: README.md  create_token.sh
.github/workflows/: depoy-service.yaml  pull-request.yaml
app/: Dockerfile  main.py  pyproject.toml  requirements.txt
app/files/: lare.txt
